[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pingback-py"
version = "0.2.0"
description = "Python SDK for Pingback — reliable cron jobs and background tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Pingback"}]
keywords = ["pingback", "cron", "scheduled-jobs", "background-tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://pingback.lol"
Repository = "https://github.com/runpingback/pingback-py"
Documentation = "https://pingback.lol/docs"
